<resources>
    <string name="app_name">SjarmKafe</string>
    <string name="tab_map">MAP</string>
    <string name="tab_listing">LISTING</string>
    <string name="tab_search">SEARCH</string>
    <string name="tab_add">ADD</string>
    <string name="tab_info">INFO</string>
    <string name="tab_rating">RATING</string>
    <string name="tab_comments">COMMENTS</string>
    <string name="tab_events">EVENTS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="meals">Meals</string>
    <string name="terrace">Terrace</string>
    <string name="wifi">Wifi</string>
    <string name="shop">Shop</string>
    <string name="express_service">Express Service</string>
    <string name="tables">Tables</string>
    <string name="dogs">Dogs</string>
    <string name="open">Open</string>
    <string name="add_direction">Add Direction</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="cafe">Coffee Shop</string>
    <string name="todo">TODO</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="user">user1</string>
    <string name="comment">Comment title</string>
    <string name="cafet">Coffee Type</string>
    <string name="add_description">Add Description</string>
    <string name="add_coffee_shop_name">Add Coffee Shop Name</string>
    <string name="trato">Trato</string>
    <string name="rapidez">Rapidez</string>
    <string name="limpieza">Limpieza</string>
    <string name="ambiente">Ambiente</string>
    <string name="precios">Precios</string>
    <string name="dise_o">Diseño</string>
    <string name="accesibilidad">Accesibilidad</string>
    <string name="aparcar">Aparcar</string>
    <string name="event">Event</string>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_user">New User</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in2">Sign In</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="title_activity_new_rating">NewRatingActivity</string>
    <string name="add_your_comment_title">Add your comment title</string>
    <string name="add_your_comment_description">Add your comment description</string>
    <string name="commentTitle">Add your comment title</string>
    <string name="commentDescription">Add your comment description</string>
    <string name="when">When?</string>
    <string name="what">What?</string>
    <string name="add_event_name">Add event name</string>
    <string name="add_event_description">Add event description</string>
    <string name="where">Where?</string>
    <string name="add_event_location">Add event location</string>
    <string name="starting">Starting?</string>
    <string name="finishing">Finishing?</string>
    <string name="coffee_type">Coffee Type:</string>


</resources>
