<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TableLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:paddingBottom="30dp"
        android:paddingTop="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/Terrace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/terrace"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/Tables"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/tables"
                android:textColor="@color/colorPrimary" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/Wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wifi"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop"
                android:textColor="@color/colorPrimary" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/Meals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meals"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/Xpress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/express_service"
                android:textColor="@color/colorPrimary" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/Dogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dogs"
                android:textColor="@color/colorPrimary" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linea_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal"
        android:paddingBottom="15dp">


        <TextView
            android:id="@+id/cafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/cafe"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rating2"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linea_nom"
        android:orientation="horizontal"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/direction"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitStart"
            android:src="@android:drawable/ic_menu_mylocation" />

        <TextView
            android:id="@+id/cafe_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dir"
        android:orientation="horizontal"
        android:paddingBottom="15dp">


        <ImageView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitStart"
            android:src="@android:drawable/ic_menu_recent_history" />

        <TextView
            android:id="@+id/horario"
            style="@android:style/Widget.DeviceDefault.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/items"
        android:orientation="horizontal"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitStart"
            android:src="@android:drawable/ic_menu_edit" />

        <TextView
            android:id="@+id/cafe_descript"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />


    </LinearLayout>

</RelativeLayout>