<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toEndOf="@id/appbar"
    app:layout_constraintTop_toBottomOf="@id/appbar"
    tools:context="com.example.eli.testtab.NewEventActivity">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/insertEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="@+id/linea_nom"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        tools:targetApi="lollipop" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linea_nom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="?attr/actionBarItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/what"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/add_event_name"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/add_event_description"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="?attr/actionModeBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event_loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/where"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:ems="10"
                    android:hint="@string/add_event_location"
                    android:inputType="textPostalAddress" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/starting"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/fecha_in"
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:animateLayoutChanges="true"
                    android:calendarViewShown="?android:attr/windowSwipeToDismiss"
                    android:datePickerMode="spinner"
                    android:firstDayOfWeek="2"
                    android:fitsSystemWindows="false"
                    android:focusedByDefault="false"
                    android:forceHasOverlappingRendering="false"
                    android:isScrollContainer="false"
                    android:layoutMode="opticalBounds"
                    tools:targetApi="lollipop" />

                <TimePicker
                    android:id="@+id/hora_in"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layoutMode="clipBounds"
                    android:timePickerMode="spinner"
                    tools:targetApi="lollipop" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fechadia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finishing"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/fecha_fin"
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:animateLayoutChanges="true"
                    android:calendarViewShown="?android:attr/windowSwipeToDismiss"
                    android:datePickerMode="spinner"
                    android:firstDayOfWeek="2"
                    android:fitsSystemWindows="false"
                    android:focusedByDefault="false"
                    android:forceHasOverlappingRendering="false"
                    android:isScrollContainer="false"
                    android:layoutMode="opticalBounds"
                    tools:targetApi="lollipop" />

                <TimePicker
                    android:id="@+id/hora_fin"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layoutMode="clipBounds"
                    android:timePickerMode="spinner"
                    tools:targetApi="lollipop" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.AppBarLayout
        android:id="@+id/linea_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@+id/linea_nom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/pic_cafeteria"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/tacita" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linea_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginVertical="250dp"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintTop_toBottomOf="@+id/linea_foto"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:targetApi="o">


        <TextView
            android:id="@+id/cafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/cafe"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="0.5" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
